force-app/main/default/objects/ReturnOrderLineItem/fields/HRCSVC_Actual_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Actual_Return_Date__c</fullName>
    <description>Created for #SE-129</description>
    <label>Actual Return Date</label>
    <type>Date</type>
</CustomField>