force-app/main/default/objects/ReturnOrderLineItem/fields/HRCSVC_Basic_Service_Fee__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Basic_Service_Fee__c</fullName>
    <label>Basic Service Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>