force-app/main/default/objects/ReturnOrderLineItem/fields/HRCSVC_Case__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Developed this for #SE-129</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Return Order Line Items</relationshipLabel>
    <relationshipName>Return_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>