force-app/main/default/objects/ReturnOrderLineItem/fields/HRCSVC_Comments__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Comments__c</fullName>
    <description>Developed for #SE-129</description>
    <label>Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>