force-app/main/default/objects/ReturnOrderLineItem/fields/HRCSVC_Complaint_Qualification_Completed__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Complaint_Qualification_Completed__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Complaint Qualification Completed?</label>
    <type>Checkbox</type>
</CustomField>