force-app/main/default/objects/ReturnOrderLineItem/fields/HRCSVC_Delivery_Number_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Delivery_Number_Created_Date__c</fullName>
    <formula>HRCSVC_Shipment__r.HRCSVC_Delivery_Number_Created_Date__c</formula>
    <label>Delivery Number Created Date</label>
    <type>Date</type>
</CustomField>