force-app/main/default/objects/ReturnOrderLineItem/fields/HRCSVC_Expected_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Expected_Delivery_Date__c</fullName>
    <formula>HRCSVC_Shipment__r.ExpectedDeliveryDate</formula>
    <label>Expected Delivery Date</label>
    <type>DateTime</type>
</CustomField>