force-app/main/default/objects/ReturnOrderLineItem/fields/HRCSVC_Freight_Fee__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Freight_Fee__c</fullName>
    <label>Freight Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>