force-app/main/default/objects/ReturnOrderLineItem/fields/HRCSVC_Order__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Return Order Line Items</relationshipLabel>
    <relationshipName>Return_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>