force-app/main/default/objects/ReturnOrderLineItem/fields/HRCSVC_Return_Type__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Return_Type__c</fullName>
    <label>Return Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exchange</fullName>
            </value>
            <value>
                <fullName>Credit Return</fullName>
            </value>
            <value>
                <fullName>Credit Memo</fullName>
            </value>
            <value>
                <fullName>Repair</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>