force-app/main/default/objects/ReturnOrderLineItem/fields/HRCSVC_Shipping_Provider__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Shipping_Provider__c</fullName>
    <formula>TEXT(HRCSVC_Shipment__r.Provider )</formula>
    <label>Shipping Provider</label>
    <type>Text</type>
</CustomField>