force-app/main/default/objects/ReturnOrderLineItem/fields/HRCSVC_Status__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Status__c</fullName>
    <description>Developed this for #SE-129</description>
    <formula>IF( QuantityReceived &gt; 0,&apos;Received&apos; ,&apos;Not Received&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>